@@ -41,8 +41,10 @@ public abstract class StoredFieldVisitor {
   protected StoredFieldVisitor() {
   }
   
-  /** Process a binary field. */
-  public void binaryField(FieldInfo fieldInfo, byte[] value, int offset, int length) throws IOException {
+  /** Process a binary field. 
+   * @param value newly allocated byte array with the binary contents. 
+   */
+  public void binaryField(FieldInfo fieldInfo, byte[] value) throws IOException {
   }
 
   /** Process a string field */
